# trading-analytics

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  vulture_whitelist.py
db/: db.py  setup.py
src/db/: db.py  setup.py
src/processes/: log_account_info.py  poller.py  trade_id.py
src/trading_analytics_dbt/models/: schema.yml  trades_view.sql
trading_analytics_dbt/models/: monthly_performance.sql  weekly_performance.sql
