[project]
name = "trading-analytics"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "duckdb>=1.4.4",
    "polars>=1.38.1",
]

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "vulture>=2.14",
]
